k8s/facerecognition-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facerecognition-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: facerecognition
  template:
    metadata:
      labels:
        component: facerecognition
    spec:
      containers:
        - name: facerecognition
          image: xtophe02/facerecognition
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: facerecognition-service
spec:
  type: ClusterIP
  selector:
    component: facerecognition
  ports:
    - port: 3003
      targetPort: 3003
