k8s/robotfriends-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robotfriends-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: robotfriends
  template:
    metadata:
      labels:
        component: robotfriends
    spec:
      containers:
        - name: robotfriends
          #imagePullPolicy: Never
          image: xtophe02/robotfriends
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: robotfriends-service
spec:
  type: ClusterIP
  selector:
    component: robotfriends
  ports:
    - port: 3001
      targetPort: 3001
